<resources>
    <string name="app_name">Downloader for Instagram</string>
    <string name="content_desc">Downloader for Instagram</string>
    <string name="get_pre">GET PREMIUM</string>
    <string name="yearly_plan">Yearly Plan</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="weekly_plan">Weekly Plan</string>

    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">810201444717-9888g6ber6rt2310le3844ldmrondm79.apps.googleusercontent.com</string>
    <string name="download">Download</string>
    <string name="download_from_private_account">Download from Private Account</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fifth_how_too">2. Open Reels Downloader app and download</string>
    <string name="fourth_how_too">1. Open Instagram, click \'Copy Link\'</string>
    <string name="gallery_name">Downloads</string>
    <string name="gcm_defaultSenderId">810201444717</string>
    <string name="google_api_key">AIzaSyC_1FX8BMlK61PI0nL-fhXOL3TGITS5Gvg</string>
    <string name="google_app_id">1:810201444717:android:835cc3613e0c1ff892ea64</string>
    <string name="google_crash_reporting_api_key">AIzaSyC_1FX8BMlK61PI0nL-fhXOL3TGITS5Gvg</string>
    <string name="google_storage_bucket">dream-anuk-insta-app.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="how_to_download">How to Download</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="open_insta">1. Open Instagram, click Share to...</string>
    <string name="open_insta_reels">2. Choose Reels Downloader</string>
    <string name="or_download_using_copied_link">Or Download via \'Copy link\'</string>
    <string name="password_toggle_content_description">Show password</string>
        <string name="paste">Paste</string>
        <string name="paste_link">Paste Link</string>
    <string name="project_id">dream-anuk-insta-app</string>
    <string name="rate_app_name">Rate App</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="share_app_message">Downloader for Instagram Save Your Favourite Videos ,  Photos &amp; Post</string>
    <string name="share_app_name">Share App</string>
    <string name="remove_ad">Remove Ad</string>
    <string name="share_image_via">Share File via...</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>