<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:tag="layout/activity_instagram_0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_banner"
        tools:ignore="NotSibling">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RLTopLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_instagram_activity"
                android:elevation="5dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/topbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/imBack"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:padding="2dp"
                        android:src="@drawable/iv_back_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/font"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/app_name"
                        android:textColor="@color/app_color_text"
                        android:textSize="@dimen/_16ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/top2bar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/topbar"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/rvRateApp2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/rateapp1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circle_round"
                            android:padding="10dp"
                            android:src="@drawable/ic_rate" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LLOpenInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle_round"
                            android:padding="10dp"
                            android:src="@drawable/ic_instagram" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/imInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circle_round"
                            android:padding="13dp"
                            android:src="@drawable/ic_info" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/top3bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top2bar"
                    android:layout_centerInParent="true"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/RLLoginInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAppName"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tvLoginInstagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:text="@string/download_from_private_account"
                            android:textColor="@color/black"
                            android:textSize="13dp" />

                        <Switch
                            android:id="@+id/SwitchLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/tvLoginInstagram"
                            android:clickable="false"
                            android:text=""
                            android:theme="@style/SCBSwitch" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/top4bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top3bar"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <RelativeLayout
                        android:id="@+id/RLEdittextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="15dp"
                        android:elevation="3dp"
                        android:padding="10dp">

                        <LinearLayout
                            android:id="@+id/ll_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/et_text"
                                android:layout_width="@dimen/_210sdp"
                                android:layout_height="60dp"
                                android:layout_below="@+id/img_clear"
                                android:background="@drawable/circle_round_edt"
                                android:hint="@string/paste_link"
                                android:padding="15dp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                android:textSize="15sp" />

                            <ImageView
                                android:id="@+id/img_clear"
                                android:layout_width="@dimen/_22sdp"
                                android:layout_height="@dimen/_22sdp"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:src="@drawable/ic_clear" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/RLDownloadLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ll_edt"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/tv_paste"
                                android:layout_width="match_parent"
                                android:layout_height="52dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_paste"
                                android:elevation="3dp"
                                android:gravity="center"
                                android:padding="14dp"
                                android:text="@string/paste"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/paste_txt_size" />

                            <TextView
                                android:id="@+id/login_btn1"
                                android:layout_width="match_parent"
                                android:layout_height="52dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_download"
                                android:elevation="3dp"
                                android:gravity="center"
                                android:padding="14dp"
                                android:text="@string/download"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/download_txt_size" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lnr_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RLTopLayout"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/RVUserList"
                    android:orientation="vertical"
                    android:tag="binding_1">

                    <include layout="@layout/layout_how_to" />


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical" />
</RelativeLayout>
